// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert[Base] should render correctly  1`] = `
<div
  style="margin-bottom: -12px;"
>
  <div
    class="cby74su soui-descriptions-wrapper"
  >
    <div
      class="c-1hob2 soui-descriptions-header"
    >
      <div
        class="c-p0qaul soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-lfrcah soui-descriptions-body c-h2bxby soui-descriptions-inline-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="c-p0vs3b soui-descriptions-table"
      >
        <tbody>
          <tr
            class="c-j0sb3f soui-descriptions-row"
          >
            <td
              class="c-wpdids soui-descriptions-inline-table"
            >
              <div
                class="c-lfmrns soui-descriptions-item"
              >
                <div
                  class="c-980k0o soui-descriptions-label-inline"
                >
                  Name
                  <span
                    style="padding-inline-start: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="c-xt61zv soui-descriptions-value-inline"
                >
                  Mai Mai
                </div>
              </div>
            </td>
            <td
              class="c-wpdids soui-descriptions-inline-table"
            >
              <div
                class="c-lfmrns soui-descriptions-item"
              >
                <div
                  class="c-980k0o soui-descriptions-label-inline"
                >
                  Residence
                  <span
                    style="padding-inline-start: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="c-xt61zv soui-descriptions-value-inline"
                >
                  Beijing
                </div>
              </div>
            </td>
            <td
              class="c-wpdids soui-descriptions-inline-table"
            >
              <div
                class="c-lfmrns soui-descriptions-item"
              >
                <div
                  class="c-980k0o soui-descriptions-label-inline"
                >
                  Address
                  <span
                    style="padding-inline-start: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="c-xt61zv soui-descriptions-value-inline"
                >
                  Yingdu Building
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="c-j0sb3f soui-descriptions-row"
          >
            <td
              class="c-wpdids soui-descriptions-inline-table"
            >
              <div
                class="c-lfmrns soui-descriptions-item"
              >
                <div
                  class="c-980k0o soui-descriptions-label-inline"
                >
                  Mobile
                  <span
                    style="padding-inline-start: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="c-xt61zv soui-descriptions-value-inline"
                >
                  187-2323-9834
                </div>
              </div>
            </td>
            <td
              class="c-wpdids soui-descriptions-inline-table"
              colspan="2"
            >
              <div
                class="c-lfmrns soui-descriptions-item"
              >
                <div
                  class="c-980k0o soui-descriptions-label-inline"
                >
                  Hometown
                  <span
                    style="padding-inline-start: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="c-xt61zv soui-descriptions-value-inline"
                >
                  Beijing
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Alert[Base] should render correctly about alignment 1`] = `
<div
  style="margin-bottom: -12px;"
>
  <div
    class="cby74su soui-descriptions-wrapper"
    style="margin-bottom: 12px;"
  >
    <div
      class="c-1hob2 soui-descriptions-header"
    >
      <div
        class="c-p0qaul soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-lfrcah soui-descriptions-body crcu7d5 soui-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="c-p0vs3b soui-descriptions-table"
      >
        <tbody>
          <tr
            class="c-j0sb3f soui-descriptions-row"
          >
            <td
              class="c-p5a501 soui-descriptions-label"
            >
              Name
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="c-p5a501 soui-descriptions-label"
            >
              Residence
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="c-p5a501 soui-descriptions-label"
            >
              Address
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
            >
              Yingdu Building
            </td>
          </tr>
          <tr
            class="c-j0sb3f soui-descriptions-row"
          >
            <td
              class="c-p5a501 soui-descriptions-label"
            >
              Hometown
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="c-p5a501 soui-descriptions-label"
            >
              Mobile
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
              colspan="3"
            >
              187-2323-9834
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="cby74su soui-descriptions-wrapper"
    style="margin-bottom: 12px;"
  >
    <div
      class="c-1hob2 soui-descriptions-header"
    >
      <div
        class="c-p0qaul soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-lfrcah soui-descriptions-body crcu7d5 soui-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="c-p0vs3b soui-descriptions-table"
      >
        <tbody>
          <tr
            class="c-j0sb3f soui-descriptions-row"
          >
            <td
              class="c-p5a501 soui-descriptions-label"
              style="text-align: end;"
            >
              Name
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="c-p5a501 soui-descriptions-label"
              style="text-align: end;"
            >
              Residence
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="c-p5a501 soui-descriptions-label"
              style="text-align: end;"
            >
              Address
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
            >
              Yingdu Building
            </td>
          </tr>
          <tr
            class="c-j0sb3f soui-descriptions-row"
          >
            <td
              class="c-p5a501 soui-descriptions-label"
              style="text-align: end;"
            >
              Hometown
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="c-p5a501 soui-descriptions-label"
              style="text-align: end;"
            >
              Mobile
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
              colspan="3"
            >
              187-2323-9834
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="cby74su soui-descriptions-wrapper"
  >
    <div
      class="c-1hob2 soui-descriptions-header"
    >
      <div
        class="c-p0qaul soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-lfrcah soui-descriptions-body"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="c-p0vs3b soui-descriptions-table"
      >
        <tbody>
          <tr
            class="c-j0sb3f soui-descriptions-row"
          >
            <td
              class="c-p5a501 soui-descriptions-label"
              style="padding-bottom: 2px;"
            >
              Name
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-p5a501 soui-descriptions-label"
              style="padding-bottom: 2px;"
            >
              Residence
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-p5a501 soui-descriptions-label"
              style="padding-bottom: 2px;"
            >
              Address
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
          </tr>
          <tr
            class="c-j0sb3f soui-descriptions-row"
          >
            <td
              class="c-ozrz9w soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
            >
              Yingdu Building
            </td>
          </tr>
          <tr
            class="c-j0sb3f soui-descriptions-row"
          >
            <td
              class="c-p5a501 soui-descriptions-label"
              style="padding-bottom: 2px;"
            >
              Hometown
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-p5a501 soui-descriptions-label"
              colspan="2"
              style="padding-bottom: 2px;"
            >
              Mobile
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
          </tr>
          <tr
            class="c-j0sb3f soui-descriptions-row"
          >
            <td
              class="c-ozrz9w soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
              colspan="2"
            >
              187-2323-9834
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Alert[Base] should render correctly about arrangement 1`] = `
<div
  style="margin-bottom: -12px;"
>
  <div
    class="c2yfuoi soui-radio-group"
    style="margin-bottom: 24px;"
  >
    <div
      class="clnvxwm soui-radio-wrapper c-863kv soui-radio-wrapper-checked"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="chxtlw1 soui-radio-indicator-wrapper"
      >
        <span
          class="c-4u63tq soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c6yu2se soui-radio-desc"
      >
        horizontal
      </span>
    </div>
    <div
      class="clnvxwm soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="chxtlw1 soui-radio-indicator-wrapper"
      >
        <span
          class="c-4u63tq soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c6yu2se soui-radio-desc"
      >
        vertical
      </span>
    </div>
    <div
      class="clnvxwm soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="chxtlw1 soui-radio-indicator-wrapper"
      >
        <span
          class="c-4u63tq soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c6yu2se soui-radio-desc"
      >
        inlineHorizontal
      </span>
    </div>
    <div
      class="clnvxwm soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="chxtlw1 soui-radio-indicator-wrapper"
      >
        <span
          class="c-4u63tq soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c6yu2se soui-radio-desc"
      >
        inlineVertical
      </span>
    </div>
  </div>
  <div
    class="c2yfuoi soui-radio-group"
    style="margin-bottom: 24px;"
  >
    <div
      class="clnvxwm soui-radio-wrapper c-863kv soui-radio-wrapper-checked"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="chxtlw1 soui-radio-indicator-wrapper"
      >
        <span
          class="c-4u63tq soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c6yu2se soui-radio-desc"
      >
        auto
      </span>
    </div>
    <div
      class="clnvxwm soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="chxtlw1 soui-radio-indicator-wrapper"
      >
        <span
          class="c-4u63tq soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c6yu2se soui-radio-desc"
      >
        fixed
      </span>
    </div>
  </div>
  <div
    class="c2yfuoi soui-radio-group"
    style="margin-bottom: 24px;"
  >
    <div
      class="clnvxwm soui-radio-wrapper c-863kv soui-radio-wrapper-checked"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="chxtlw1 soui-radio-indicator-wrapper"
      >
        <span
          class="c-4u63tq soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c6yu2se soui-radio-desc"
      >
        no border
      </span>
    </div>
    <div
      class="clnvxwm soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="chxtlw1 soui-radio-indicator-wrapper"
      >
        <span
          class="c-4u63tq soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c6yu2se soui-radio-desc"
      >
        border
      </span>
    </div>
  </div>
  <div
    class="cby74su soui-descriptions-wrapper"
  >
    <div
      class="c-1hob2 soui-descriptions-header"
    >
      <div
        class="c-p0qaul soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-lfrcah soui-descriptions-body crcu7d5 soui-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="c-p0vs3b soui-descriptions-table"
      >
        <tbody>
          <tr
            class="c-j0sb3f soui-descriptions-row"
          >
            <td
              class="c-p5a501 soui-descriptions-label"
            >
              Name
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="c-p5a501 soui-descriptions-label"
            >
              Residence
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="c-p5a501 soui-descriptions-label"
            >
              Address
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
            >
              Yingdu Building
            </td>
          </tr>
          <tr
            class="c-j0sb3f soui-descriptions-row"
          >
            <td
              class="c-p5a501 soui-descriptions-label"
            >
              Mobile
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
            >
              187-2323-9834
            </td>
            <td
              class="c-p5a501 soui-descriptions-label"
            >
              Hometown
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
              colspan="3"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Alert[Base] should render correctly about border 1`] = `
<div>
  <div
    class="cby74su soui-descriptions-wrapper"
    style="margin-bottom: 20px;"
  >
    <div
      class="c-1hob2 soui-descriptions-header"
    >
      <div
        class="c-p0qaul soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-lfrcah soui-descriptions-body c-2pylyn soui-descriptions-border c-69n5nj soui-descriptions-table-layout-fixed crcu7d5 soui-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="c-p0vs3b soui-descriptions-table"
      >
        <tbody>
          <tr
            class="c-j0sb3f soui-descriptions-row"
          >
            <td
              class="c-p5a501 soui-descriptions-label"
            >
              Name
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="c-p5a501 soui-descriptions-label"
            >
              Residence
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="c-p5a501 soui-descriptions-label"
            >
              Address
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
            >
              Yingdu Building,Zhichun Road,Beijing
            </td>
          </tr>
          <tr
            class="c-j0sb3f soui-descriptions-row"
          >
            <td
              class="c-p5a501 soui-descriptions-label"
            >
              Mobile
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
            >
              187-2323-9834
            </td>
            <td
              class="c-p5a501 soui-descriptions-label"
            >
              Hometown
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
              colspan="3"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="cby74su soui-descriptions-wrapper"
    style="margin-bottom: 20px;"
  >
    <div
      class="c-1hob2 soui-descriptions-header"
    >
      <div
        class="c-p0qaul soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-lfrcah soui-descriptions-body c-2pylyn soui-descriptions-border c-69n5nj soui-descriptions-table-layout-fixed crcu7d5 soui-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="c-p0vs3b soui-descriptions-table"
      >
        <tbody>
          <tr
            class="c-j0sb3f soui-descriptions-row"
          >
            <td
              class="c-p5a501 soui-descriptions-label"
              style="text-align: end;"
            >
              Name
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="c-p5a501 soui-descriptions-label"
              style="text-align: end;"
            >
              Residence
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="c-p5a501 soui-descriptions-label"
              style="text-align: end;"
            >
              Address
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
            >
              Yingdu Building,Zhichun Road,Beijing
            </td>
          </tr>
          <tr
            class="c-j0sb3f soui-descriptions-row"
          >
            <td
              class="c-p5a501 soui-descriptions-label"
              style="text-align: end;"
            >
              Mobile
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
            >
              187-2323-9834
            </td>
            <td
              class="c-p5a501 soui-descriptions-label"
              style="text-align: end;"
            >
              Hometown
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
              colspan="3"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="cby74su soui-descriptions-wrapper"
  >
    <div
      class="c-1hob2 soui-descriptions-header"
    >
      <div
        class="c-p0qaul soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-lfrcah soui-descriptions-body c-2pylyn soui-descriptions-border c-69n5nj soui-descriptions-table-layout-fixed"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="c-p0vs3b soui-descriptions-table"
      >
        <tbody>
          <tr
            class="c-j0sb3f soui-descriptions-row"
          >
            <td
              class="c-p5a501 soui-descriptions-label"
            >
              Name
            </td>
            <td
              class="c-p5a501 soui-descriptions-label"
            >
              Residence
            </td>
            <td
              class="c-p5a501 soui-descriptions-label"
            >
              Address
            </td>
            <td
              class="c-p5a501 soui-descriptions-label"
            >
              Mobile
            </td>
          </tr>
          <tr
            class="c-j0sb3f soui-descriptions-row"
          >
            <td
              class="c-ozrz9w soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
            >
              Yingdu Building,Zhichun Road,Beijing
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
            >
              187-2323-9834
            </td>
          </tr>
          <tr
            class="c-j0sb3f soui-descriptions-row"
          >
            <td
              class="c-p5a501 soui-descriptions-label"
              colspan="4"
            >
              Hometown
            </td>
          </tr>
          <tr
            class="c-j0sb3f soui-descriptions-row"
          >
            <td
              class="c-ozrz9w soui-descriptions-value"
              colspan="4"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Alert[Base] should render correctly about colums 1`] = `
<div
  style="margin-bottom: -12px;"
>
  <div
    class="cby74su soui-descriptions-wrapper"
    style="margin-bottom: 12px;"
  >
    <div
      class="c-1hob2 soui-descriptions-header"
    >
      <div
        class="c-p0qaul soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-lfrcah soui-descriptions-body crcu7d5 soui-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="c-p0vs3b soui-descriptions-table"
      >
        <tbody>
          <tr
            class="c-j0sb3f soui-descriptions-row"
          >
            <td
              class="c-p5a501 soui-descriptions-label"
            >
              Name
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
            >
              Mai Mai
            </td>
          </tr>
          <tr
            class="c-j0sb3f soui-descriptions-row"
          >
            <td
              class="c-p5a501 soui-descriptions-label"
            >
              Mobile
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
            >
              187-2323-9834
            </td>
          </tr>
          <tr
            class="c-j0sb3f soui-descriptions-row"
          >
            <td
              class="c-p5a501 soui-descriptions-label"
            >
              Residence
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="cby74su soui-descriptions-wrapper"
  >
    <div
      class="c-1hob2 soui-descriptions-header"
    >
      <div
        class="c-p0qaul soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-lfrcah soui-descriptions-body crcu7d5 soui-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="c-p0vs3b soui-descriptions-table"
      >
        <tbody>
          <tr
            class="c-j0sb3f soui-descriptions-row"
          >
            <td
              class="c-p5a501 soui-descriptions-label"
              style="text-align: end;"
            >
              Name
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
            >
              Mai Mai
            </td>
          </tr>
          <tr
            class="c-j0sb3f soui-descriptions-row"
          >
            <td
              class="c-p5a501 soui-descriptions-label"
              style="text-align: end;"
            >
              Mobile
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
            >
              187-2323-9834
            </td>
          </tr>
          <tr
            class="c-j0sb3f soui-descriptions-row"
          >
            <td
              class="c-p5a501 soui-descriptions-label"
              style="text-align: end;"
            >
              Residence
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Alert[Base] should render correctly about responsive 1`] = `
<div>
  <div
    class="cby74su soui-descriptions-wrapper"
  >
    <div
      class="c-1hob2 soui-descriptions-header"
    >
      <div
        class="c-p0qaul soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-lfrcah soui-descriptions-body c-2pylyn soui-descriptions-border crcu7d5 soui-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="c-p0vs3b soui-descriptions-table"
      >
        <tbody>
          <tr
            class="c-j0sb3f soui-descriptions-row"
          >
            <td
              class="c-p5a501 soui-descriptions-label"
              style="text-align: end;"
            >
              Name
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="c-p5a501 soui-descriptions-label"
              style="text-align: end;"
            >
              Residence
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="c-p5a501 soui-descriptions-label"
              style="text-align: end;"
            >
              Address
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
            >
              Yingdu Building,Zhichun Road,Beijing
            </td>
          </tr>
          <tr
            class="c-j0sb3f soui-descriptions-row"
          >
            <td
              class="c-p5a501 soui-descriptions-label"
              style="text-align: end;"
            >
              Mobile
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
            >
              187-2323-9834
            </td>
            <td
              class="c-p5a501 soui-descriptions-label"
              style="text-align: end;"
            >
              Hometown
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
              colspan="3"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Alert[Base] should render correctly about size 1`] = `
<div>
  <div
    class="c2yfuoi soui-radio-group"
    style="margin-bottom: 24px;"
  >
    <div
      class="clnvxwm soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="chxtlw1 soui-radio-indicator-wrapper"
      >
        <span
          class="c-4u63tq soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c6yu2se soui-radio-desc"
      >
        small
      </span>
    </div>
    <div
      class="clnvxwm soui-radio-wrapper c-863kv soui-radio-wrapper-checked"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="chxtlw1 soui-radio-indicator-wrapper"
      >
        <span
          class="c-4u63tq soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c6yu2se soui-radio-desc"
      >
        default
      </span>
    </div>
    <div
      class="clnvxwm soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="chxtlw1 soui-radio-indicator-wrapper"
      >
        <span
          class="c-4u63tq soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c6yu2se soui-radio-desc"
      >
        large
      </span>
    </div>
  </div>
  <div
    class="cby74su soui-descriptions-wrapper"
    style="margin-bottom: 12px;"
  >
    <div
      class="c-1hob2 soui-descriptions-header"
    >
      <div
        class="c-p0qaul soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-lfrcah soui-descriptions-body c-h2bxby soui-descriptions-inline-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="c-p0vs3b soui-descriptions-table"
      >
        <tbody>
          <tr
            class="c-j0sb3f soui-descriptions-row"
          >
            <td
              class="c-wpdids soui-descriptions-inline-table"
            >
              <div
                class="c-lfmrns soui-descriptions-item"
              >
                <div
                  class="c-980k0o soui-descriptions-label-inline"
                >
                  Name
                  <span
                    style="padding-left: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="c-xt61zv soui-descriptions-value-inline"
                >
                  Mai Mai
                </div>
              </div>
            </td>
            <td
              class="c-wpdids soui-descriptions-inline-table"
            >
              <div
                class="c-lfmrns soui-descriptions-item"
              >
                <div
                  class="c-980k0o soui-descriptions-label-inline"
                >
                  Residence
                  <span
                    style="padding-left: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="c-xt61zv soui-descriptions-value-inline"
                >
                  Beijing
                </div>
              </div>
            </td>
            <td
              class="c-wpdids soui-descriptions-inline-table"
            >
              <div
                class="c-lfmrns soui-descriptions-item"
              >
                <div
                  class="c-980k0o soui-descriptions-label-inline"
                >
                  Address
                  <span
                    style="padding-left: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="c-xt61zv soui-descriptions-value-inline"
                >
                  Yingdu Building,Zhichun Road,Beijing
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="c-j0sb3f soui-descriptions-row"
          >
            <td
              class="c-wpdids soui-descriptions-inline-table"
            >
              <div
                class="c-lfmrns soui-descriptions-item"
              >
                <div
                  class="c-980k0o soui-descriptions-label-inline"
                >
                  Mobile
                  <span
                    style="padding-left: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="c-xt61zv soui-descriptions-value-inline"
                >
                  187-2323-9834
                </div>
              </div>
            </td>
            <td
              class="c-wpdids soui-descriptions-inline-table"
              colspan="2"
            >
              <div
                class="c-lfmrns soui-descriptions-item"
              >
                <div
                  class="c-980k0o soui-descriptions-label-inline"
                >
                  Hometown
                  <span
                    style="padding-left: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="c-xt61zv soui-descriptions-value-inline"
                >
                  Beijing
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="cby74su soui-descriptions-wrapper"
  >
    <div
      class="c-1hob2 soui-descriptions-header"
    >
      <div
        class="c-p0qaul soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-lfrcah soui-descriptions-body c-2pylyn soui-descriptions-border crcu7d5 soui-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="c-p0vs3b soui-descriptions-table"
      >
        <tbody>
          <tr
            class="c-j0sb3f soui-descriptions-row"
          >
            <td
              class="c-p5a501 soui-descriptions-label"
              style="text-align: end;"
            >
              Name
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="c-p5a501 soui-descriptions-label"
              style="text-align: end;"
            >
              Residence
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="c-p5a501 soui-descriptions-label"
              style="text-align: end;"
            >
              Address
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
            >
              Yingdu Building,Zhichun Road,Beijing
            </td>
          </tr>
          <tr
            class="c-j0sb3f soui-descriptions-row"
          >
            <td
              class="c-p5a501 soui-descriptions-label"
              style="text-align: end;"
            >
              Mobile
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
            >
              187-2323-9834
            </td>
            <td
              class="c-p5a501 soui-descriptions-label"
              style="text-align: end;"
            >
              Hometown
            </td>
            <td
              class="c-ozrz9w soui-descriptions-value"
              colspan="3"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
